log
Thu Apr 16 08:02:59 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
2e87fa9
Thu Apr 16 08:08:40 PM UTC 2026: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:48:32: error: too few arguments to function ‘calloc’
   48 |     HashMap *mapa = (HashMap*) calloc(capacity * sizeof(HashMap));
      |                                ^~~~~~
In file included from test.c:2:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdlib.h:675:14: note: declared here
  675 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
hashmap.c:49:29: error: void value not ignored as it ought to be
   49 |     if(mapa == NULL) return exit(EXIT_FAILURE);
      |                             ^~~~~~~~~~~~~~~~~~
2eed686
Thu Apr 16 08:09:31 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:29: error: void value not ignored as it ought to be
   49 |     if(mapa == NULL) return exit(EXIT_FAILURE);
      |                             ^~~~~~~~~~~~~~~~~~
99a13de
Thu Apr 16 08:11:30 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:29: error: void value not ignored as it ought to be
   49 |     if(mapa == NULL) return exit(EXIT_FAILURE);
      |                             ^~~~~~~~~~~~~~~~~~
afdba78
Thu Apr 16 08:11:48 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:29: error: void value not ignored as it ought to be
   49 |     if(mapa == NULL) return exit(EXIT_FAILURE);
      |                             ^~~~~~~~~~~~~~~~~~
d34b4c4
Thu Apr 16 08:14:00 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:29: error: void value not ignored as it ought to be
   49 |     if(mapa == NULL) return exit(EXIT_FAILURE);
      |                             ^~~~~~~~~~~~~~~~~~
71c709b
Thu Apr 16 08:14:12 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4e9bafa
Thu Apr 16 08:16:46 PM UTC 2026: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 5/60
923c89b
Thu Apr 16 08:27:07 PM UTC 2026: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:70:5: error: unknown type name ‘pair’; did you mean ‘Pair’?
   70 |     pair *par = createPair(key, value);
      |     ^~~~
      |     Pair
hashmap.c:70:17: error: initialization of ‘int *’ from incompatible pointer type ‘Pair *’ [-Wincompatible-pointer-types]
   70 |     pair *par = createPair(key, value);
      |                 ^~~~~~~~~~
hashmap.c:73:29: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   73 |         map->buckets[pos] = pair;
      |                             ^~~~
      |                             Pair
hashmap.c:73:29: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:70:11: error: unused variable ‘par’ [-Werror=unused-variable]
   70 |     pair *par = createPair(key, value);
      |           ^~~
cc1: all warnings being treated as errors
eec83ac
Thu Apr 16 08:27:26 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:73:29: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   73 |         map->buckets[pos] = pair;
      |                             ^~~~
      |                             Pair
hashmap.c:73:29: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:70:11: error: unused variable ‘par’ [-Werror=unused-variable]
   70 |     Pair *par = createPair(key, value);
      |           ^~~
cc1: all warnings being treated as errors
623dedf
Thu Apr 16 08:27:47 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
3a34ab2
Thu Apr 16 08:28:16 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:73:29: error: incompatible types when assigning to type ‘Pair *’ from type ‘Pair’
   73 |         map->buckets[pos] = *par;
      |                             ^
2e96f8d
Thu Apr 16 08:28:26 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
6cf9f89
Thu Apr 16 08:28:54 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 10/60
ee17c94
Thu Apr 16 08:33:11 PM UTC 2026: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:92:33: error: ‘value’ undeclared (first use in this function)
   92 |     Pair *par = createPair(key, value);
      |                                 ^~~~~
hashmap.c:92:33: note: each undeclared identifier is reported only once for each function it appears in
d81a498
Thu Apr 16 08:33:34 PM UTC 2026: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:94:29: error: ‘par’ undeclared (first use in this function)
   94 |         map->buckets[pos] = par;
      |                             ^~~
hashmap.c:94:29: note: each undeclared identifier is reported only once for each function it appears in
496e602
Thu Apr 16 08:34:29 PM UTC 2026: 
 hashmap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  2|5
total_score: 10/60
62e5460
Thu Apr 16 08:36:04 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/60
84a01be
Thu Apr 16 08:38:40 PM UTC 2026: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
fb59bf4
Thu Apr 16 08:39:05 PM UTC 2026: 
 tests:  0|0
f2edce2
Thu Apr 16 08:39:39 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:105:1: error: control reaches end of non-void function [-Werror=return-type]
  105 | }
      | ^
cc1: all warnings being treated as errors
7408079
Thu Apr 16 08:40:17 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
9820d68
Thu Apr 16 08:41:22 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bebce55
Thu Apr 16 08:42:49 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
b610b6f
Thu Apr 16 08:43:32 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
2cc846e
Thu Apr 16 08:44:24 PM UTC 2026: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:70:11: error: unused variable ‘par’ [-Werror=unused-variable]
   70 |     Pair *par = createPair(key, value);
      |           ^~~
cc1: all warnings being treated as errors
caae6c7
Thu Apr 16 08:45:13 PM UTC 2026: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 10/60
35f9a4b
Thu Apr 16 08:47:57 PM UTC 2026: 
 hashmap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 10/60
4ca6cb4
Thu Apr 16 08:49:18 PM UTC 2026: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
4993b64
Thu Apr 16 08:50:51 PM UTC 2026: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 10/60
71123eb
Thu Apr 16 08:53:43 PM UTC 2026: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 10/60
ded7f32
Thu Apr 16 08:57:09 PM UTC 2026: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  2|5
total_score: 10/60
61aef49
Thu Apr 16 09:00:53 PM UTC 2026: 
 hashmap.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  4|5
total_score: 10/60
aa13258
Thu Apr 16 09:03:57 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:77:18: error: expected expression before ‘)’ token
   77 |         if (pos >) pos = 0;
      |                  ^
42a8640
Fri Apr 17 01:20:27 AM UTC 2026: 
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:77:18: error: expected expression before ‘)’ token
   77 |         if (pos >) pos = 0;
      |                  ^
593372d
Fri Apr 17 01:22:57 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 10/60
239e453
Fri Apr 17 01:23:43 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 10/60
8687a89
Fri Apr 17 01:26:26 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 10/60
7fd89b8
Fri Apr 17 09:55:14 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 10/60
2574ee3
Fri Apr 17 09:57:28 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
511ab0c
Fri Apr 17 09:57:50 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
65d6861
